@@ -153,6 +153,7 @@ James Duncan Davidson
 Jan Cumps
 Jan Matèrne
 Jan Mynarik
+Jan Stolze
 Jason Hunter
 Jason Pettiss
 Jason Salter
