@@ -628,15 +628,19 @@
   </name>
   <name>
     <first>Jan</first>
+    <last>Cumps</last>
+  </name>
+  <name>
+    <first>Jan</first>
     <last>Mat&#232;rne</last>
   </name>
-    <name>
-      <first>Jan</first>
-      <last>Cumps</last>
-    </name>
   <name>
     <first>Jan</first>
     <last>Mynarik</last>
+  </name>
+  <name>
+    <first>Jan</first>
+    <last>Stolze</last>
   </name>
   <name>
     <first>Jason</first>
